--- a/DTL.nuspec
+++ b/DTL.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>DatabaseTraceListener</id>
-    <version>1.0.4</version>
+    <version>1.0.6</version>
     <title>DTL: DatabaseTraceListener</title>
     <authors>Aron Davis</authors>
     <owners>Aron Davis</owners>
@@ -13,7 +13,7 @@
     <description>
 		A custom trace listener for logging to a database.
 	</description>
-    <releaseNotes>Added source + event Id.</releaseNotes>
+    <releaseNotes>Added MachineName</releaseNotes>
     <copyright>Copyright 2017</copyright>
     <tags>Database SQL TraceListener DatabaseTraceListener DTL</tags>
   </metadata>
